--- a/res/layout/fragment_item_detail.xml
+++ b/res/layout/fragment_item_detail.xml
@@ -1,8 +1,31 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="fill_parent"
+  android:layout_height="fill_parent"
+  android:orientation="vertical"
+  android:paddingLeft="10dp"
+  android:paddingRight="10dp" 
+  tools:context=".ItemDetailFragment" 
+  >
+
+
+  <TextView 
     android:id="@+id/item_detail"
     style="?android:attr/textAppearanceLarge"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:padding="16dp"
-    tools:context=".ItemDetailFragment" />
+    />
+
+  <Button
+    android:id="@+id/enter_data"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:padding="20dp"
+    android:text="Order"
+    android:textSize="21dp" 
+    android:onClick="onOrderClick" 
+    />
+
+</LinearLayout>
