--- a/res/layout/random_order.xml
+++ b/res/layout/random_order.xml
@@ -13,6 +13,15 @@
     android:layout_height="wrap_content"
     android:padding="20dp"
     android:text="Ordering..."
+    android:textSize="21dp"
+    />
+
+
+  <ProgressBar
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:padding="20dp"
+    android:text="Placing Order..."
     android:textSize="21dp" 
     />
 
